Fix Twitter user name

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ your_city                                 : Singapore
 email_address                             : ajpagente.software@gmail.com
 facebook_username                         :                                           
 instagram_username                        : 
-twitter_username                          : @ajpagente
+twitter_username                          : ajpagente
 github_username                           : 
 youtube_username                          :
 
