--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ presskit_download_link                    :                                     
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
 app_icon                                  : # assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
-app_name                                  : Katagrafo                                 # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_price                                 : Free                                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_name                                  : # Katagrafo                                 # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_price                                 : # Free                                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_description                           : Productivity starts by knowing where you spend your time
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
@@ -34,6 +34,10 @@ youtube_username                          :
 # Feature List                            Edit, add or remove features to be presented.
 features                                  :
 
+  - title                                 : Simple, Easy to Use
+    description                           : Katagrafo is designed to provide you the information you need
+    fontawesome_icon_name                 : star
+    
   - title                                 : Task Time Tracking
     description                           : Create and remove tasks, and measure time spent on a task via a timer
     fontawesome_icon_name                 : clock
@@ -72,16 +76,6 @@ social_icons_foreground_color             : "#666666"
 social_icons_background_color             : "#e6e6e6"
 
 footer_text_color                         : "#666666"
-
-
-
-
-
-
-
-
-
-
 
 
 
