--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ presskit_download_link                    :                                     
 app_icon                                  : # assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  : # Katagrafo                                 # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 : # Free                                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : Productivity starts by knowing where you spend your time
+app_description                           : A simple time tracker
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
@@ -35,7 +35,7 @@ youtube_username                          :
 features                                  :
 
   - title                                 : Simple, Easy to Use
-    description                           : Katagrafo is designed to provide you only the information you need
+    description                           : Katagrafo is designed to help with your productivity and not to hinder you
     fontawesome_icon_name                 : star
     
   - title                                 : Task Time Tracking
