--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,9 @@ features                                  :
     description                           : View daily record of time spent
     fontawesome_icon_name                 : history
 
+  - title                                 : Task In Progress Reminder
+    description                           : Be remind every 15 mins of ongoing task
+    fontawesome_icon_name                 : bell
 
 # Theme Settings
 topbar_color                              : "#000000"
